# tiny-duo-infer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy-website.yml  test.yml
docs/: agent-guidelines.md  architecture.md  current-task-template.md  file-structure.md  proposal-current-task-tracking.md  refined-plan.md  refined-plan_codex.md
docs/phases/: README.md  phase-1-handoff.md  phase-1-mlx-single-user.md  phase-1-taskboard.md  phase-1.5-qwen3-mlx.md  phase-1.5-taskboard.md  phase-1.6-generation-serving.md  phase-1.6-taskboard.md  phase-1.7-observability.md  phase-1.7-taskboard.md  phase-1.8-handoff.md  phase-1.8-taskboard.md  phase-1.8-weight-quantization.md
learning_materials/: data-flow.md  data-flow_zh.md  internals.md  internals_zh.md  roadmap.md  roadmap_cc.md
learning_materials/deep_dives/: chat_templating.md  chat_templating_zh.md  gqa_and_kv_cache.md  gqa_and_kv_cache_zh.md  inference_worker.md  inference_worker_zh.md  quantization.md  quantization_zh.md  rope.md  rope_zh.md  (+4 more)
scripts/: benchmark.py  profile_generation.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_context_policy.py  test_engine.py  test_generation.py  test_layers.py  test_model.py  test_profiling.py  test_prompt.py  test_quantization.py  test_quantization_integration.py  test_sampling.py  test_serving.py  test_tokenizer.py  test_weights.py
tiny_duo_infer/: __init__.py  cache.py  cli.py  config.py  context_policy.py  engine.py  generation.py  profiling.py  prompt.py  quantization.py  sampling.py
website/: index.html
(+23 files in other folders)
