[project]
name = "tiny-duo-infer"
version = "0.1.0"
description = "A learning-first LLM inference engine inspired by vLLM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx>=0.10",
    "tokenizers>=0.19",
    "huggingface-hub>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "transformers>=4.40",
    "safetensors>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_duo_infer"]
