[project]
name = "tiny-duo-infer"
version = "0.1.0"
description = "A learning-first LLM inference engine inspired by vLLM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx>=0.10",
    "tokenizers>=0.19",
    "huggingface-hub>=0.23",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "transformers>=4.40",
    "safetensors>=0.4",
    "httpx>=0.27",
]

[project.scripts]
tiny-duo-infer = "tiny_duo_infer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_duo_infer"]

[tool.pytest.ini_options]
filterwarnings = [
    # starlette 1.x deprecates httpx in favour of httpx2 in TestClient; suppress until resolved
    "ignore:Using.*httpx.*starlette.testclient:UserWarning",
]
